Update HTML meta tags and script references

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CSAI</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 
-  <!-- ✅ 1. docx ライブラリを先に読み込む -->
-  <script type="text/javascript" src="https://unpkg.com/docx@7.7.0/build/index.umd.js"></script>
+  <!-- ✅ 最新安定版 docx（GitHub Pages 対応） -->
+  <script src="https://unpkg.com/docx@8.0.0/build/index.umd.js"></script>
 
-  <!-- ✅ 2. app.js は defer で後から実行 -->
-  <script defer type="text/javascript" src="app.js"></script>
+  <!-- ✅ app.js を defer で後から実行 -->
+  <script defer src="app.js"></script>
 </head>
 
 <body>
